--- a/02b_no_ref_align.html
+++ b/02b_no_ref_align.html
@@ -5,7 +5,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
-<title>Step 02</title>
+<title>Step 02B - Aligning RNA Directly to DNA without a Reference Library</title>
 
 <base target="_blank"/>
 
@@ -182,7 +182,11 @@ hljs.initHighlightingOnLoad();
 <body>
 <p><link href="http://kevinburke.bitbucket.org/markdowncss/markdown.css" rel="stylesheet"></link></p>
 
-<h1>Step 02</h1>
+<h1>Step 02B - Aligning RNA Directly to DNA without a Reference Library</h1>
+
+<blockquote>
+<p>I ended up scrapping this style of analysis in favor of doing the alignments against the reference library. After looking at the intersection of DNA, RNA and Protein that matched all criteria, we ended up gaining too few reads this way, and I was concerned that some of the sequences we gained would be error-prone or poor-quality data. </p>
+</blockquote>
 
 <h2>Motivation</h2>
 
@@ -191,6 +195,18 @@ hljs.initHighlightingOnLoad();
 <p>We are going to compute properties of each construct based on its nucleotide and DNA sequence, and so we are more intrested here in library diversity and not the identities of the sequences themselves. For instance, we don&#39;t care so much that the CDS sequence consists precisely the same amino acids as the front of the BamA gene, so much as that it has X secondary structure, Y codon adaptation index, etc. </p>
 
 <p>I&#39;m going to (quickly) check to see if it is feasible to see if we can proceed without aligning both the RNA and DNA directly to the reference library. Perhaps instead we can first pull out all DNA with sufficient reads, and then subsequently align the RNA to those new &#39;reference&#39; reads.</p>
+
+<h3>Caveats to this approach</h3>
+
+<p>We can&#39;t use all of these sequences for a few reasons:</p>
+
+<ol>
+<li>We must limited ourselves to sequences with perfect promoters and RBS. This hasn&#39;t removed too many reads, because the mismatch distribution histograms from Step 02 showed that not too many of the mismatches occur before base 40. </li>
+<li>The CDS need to be in frame, from the first ATG onward. This is easy enough to check for after splitting at the ATG. I&#39;m not sure whether I should throw away or keep shorter CDSs; it will probably depend on how many there are. </li>
+<li>Dealing with multiple potential start sites might be problematic. For instance, if a mutation creates an extra ATG somewhere else close to the Shine-Dalrarno, it would complicate the amino acid analysis. To ensure that the start site does not change, I should remove sequences that create new ATGs close to the RBS in different frames, and make sure that none of the codons in the CDS were mutated to ATG. </li>
+<li>I also want to throw away any sequences with stop codons in them. </li>
+<li>As Sri and I discussed earlier, we are hiding any errors that are not part of the variable region, like the fluorescent coding sequences on the backbone.</li>
+</ol>
 
 <h3>How do we choose a DNA read count cutoff, if we don&#39;t align to references?</h3>
 
@@ -249,14 +265,6 @@ less -S $dna_prefix.fa | perl -pe &#39;chomp; s/&gt;/\n&gt;/;
     | sort -nrk2 | cut -f2 | uniq -c \
     | cut -f1 | perl -nle &#39;$sum += $_ } END { print $sum&#39;
 
-#Count unique contigs with at least 100 reads in both replicates
-less -S $dna_prefix.fa | perl -pe &#39;chomp; s/&gt;/\n&gt;/; 
-        s/^([ATGC])/\t$1/;&#39; \
-    | perl -ne &#39;@l = split; !(/N/) &amp;&amp; $l[2] &gt;= 100 &amp;&amp; $l[3] &gt;= 100 
-        &amp;&amp; length($l[4]) &lt; 100 &amp;&amp; length($l[4]) &gt; 70 &amp;&amp; print $_;&#39; \
-    | sort -nrk2 | cut -f2 | uniq -c \
-    | cut -f1 | perl -nle &#39;$sum += $_ } END { print $sum&#39;
-
 #Output: 16972
 
 #Count unique contigs with at least 50 reads in both replicates
@@ -272,22 +280,218 @@ less -S $dna_prefix.fa | perl -pe &#39;chomp; s/&gt;/\n&gt;/;
 
 <p>So we end up with 16972 sequences with 100+ DNA reads. That&#39;s an extra 2,738 reads. If we lower our cutoff to 50 (which are still likely synthesis errors, but we&#39;d have a smaller RNA ratio dynamic range), then that number goes up to 27154, or double our library size. </p>
 
-<h3>Caveats to this approach</h3>
+<h3>Checking the Protein Sequences</h3>
 
-<p>Now, there are some caveats here. We can&#39;t use all of these sequences for a few reasons:</p>
+<p>As Sri pointed out, the bottleneck here will really be Protein contigs, since there are fewer cells sorted than anything else. I should really see how many unique protein contigs there are. I can check that similarly:</p>
 
-<ol>
-<li>We should probably limit ourselves to sequences with perfect promoters. I don&#39;t think this won&#39;t hurt us too much, because the mismatch distribution histograms from Step 02 showed that not too many of the mismatches occur before base 40. </li>
-<li>The CDS need to be in frame, from the first ATG onward. This is easy enough to check after splitting at the ATG. I&#39;m not sure whether I should throw away or keep shorter CDSs; it will probably depend on how many there are. </li>
-<li>Dealing with multiple potential start sites might be problematic. For instance, if a mutation creates an extra ATG somewhere else close to the Shine-Dalrarno, it would complicate the amino acid analysis. To ensure that the start site does not change, I should remove sequences that create new ATGs close to the RBS in different frames, and make sure that none of the codons in the CDS were mutated to ATG. </li>
-<li>I also want to throw away any sequences with stop codons in them. </li>
-<li>Some of these sequences (42 + mismatches and contaminants) are the 202-spike-in set.</li>
-<li>As Sri and I discussed earlier, we are hiding any errors that are not part of the variable region, like the fluorescent coding sequences on the backbone.</li>
-</ol>
+<pre><code class="bash">
+prot_prefix=/scratch/dbg/ecre/ct/203_hiseq/203_hiseq.counts
+
+#Count unique contigs with at least 200 reads
+less -S $prot_prefix.fa | perl -pe &#39;chomp; s/&gt;/\n&gt;/; 
+        s/^([ATGC])/\t$1/;&#39; \
+    | perl -ne &#39;@l = split; !(/N/) &amp;&amp; $l[1] &gt;= 200
+        &amp;&amp; length($l[14]) &lt; 100 &amp;&amp; length($l[14]) &gt; 70 &amp;&amp; print $_;&#39; \
+    | sort -nrk2 | cut -f2 | uniq -c \
+    | cut -f1 | perl -nle &#39;$sum += $_ } END { print $sum&#39;
+
+#Output: 165600
+</code></pre>
+
+<p>This number is about 10x what we expect. That seems like a little much. I guess we&#39;ll see what happens when we intersect the DNA, RNA, and protein data. </p>
+
+<h3>Performing final filtering for DNA &amp; Protein using grep</h3>
+
+<p>I&#39;m going to save the raw counts files locally for RNA, DNA, and Protein, after filtering them based on length, read count, etc. </p>
+
+<p>After further discussion with Sri, we don&#39;t expect to see the same extreme dynamic range with this set of RNA data because we are only using two promoters. Because of this, we can lower the amount of DNA that we require to 25 reads per replicate.</p>
+
+<table><thead>
+<tr>
+<th>Contig Type</th>
+<th>Min Len</th>
+<th>Max Len</th>
+<th>Min Read Count (Per replicate for DNA/RNA)</th>
+</tr>
+</thead><tbody>
+<tr>
+<td>DNA</td>
+<td>70</td>
+<td>100</td>
+<td>25</td>
+</tr>
+<tr>
+<td>RNA</td>
+<td>52</td>
+<td>90</td>
+<td>4</td>
+</tr>
+<tr>
+<td>Protein</td>
+<td>70</td>
+<td>100</td>
+<td>100</td>
+</tr>
+</tbody></table>
+
+<pre><code class="bash">lib_prefix=/scratch/dbg/ecre/fa/203.norestrict
+out_prefix=/scratch/dbg/ecre/203_hs
+dna_prefix=/scratch/dbg/ecre/ct/203_hsdna/203_hsdna.counts
+rna_prefix=/scratch/dbg/ecre/ct/203_hsrna/203_hsrna.counts
+prot_prefix=/scratch/dbg/ecre/ct/203_hiseq/203_hiseq.counts
+
+#Filter RNA/Prot/DNA on read length and read counts
+less -S $dna_prefix.fa | perl -pe &#39;chomp; s/&gt;/\n&gt;/; 
+        s/^([ATGC])/\t$1/;&#39; \
+    | perl -ne &#39;@l = split; !(/N/) &amp;&amp; $l[2] &gt;= 25 &amp;&amp; $l[3] &gt;= 25
+        &amp;&amp; length($l[4]) &lt; 100 &amp;&amp; length($l[4]) &gt; 70
+        &amp;&amp; s/\t([ATGC])/\n$1/ &amp;&amp; print $_;&#39; \
+    &gt; /scratch/dbg/ecre/203.dna.fa &amp;
+
+less -S $rna_prefix.fa | perl -pe &#39;chomp; s/&gt;/\n&gt;/; 
+        s/^([ATGC])/\t$1/;&#39; \
+    | perl -ne &#39;@l = split; !(/N/) &amp;&amp; $l[2] &gt;= 4 &amp;&amp; $l[3] &gt;= 4
+        &amp;&amp; length($l[4]) &lt; 90 &amp;&amp; length($l[4]) &gt; 52
+        &amp;&amp; s/\t([ATGC])/\n$1/ &amp;&amp; print $_;&#39; \
+    &gt; /scratch/dbg/ecre/203.rna.fa &amp;
+
+less -S $prot_prefix.fa | perl -pe &#39;chomp; s/&gt;/\n&gt;/; 
+        s/^([ATGC])/\t$1/;&#39; \
+    | perl -ne &#39;@l = split; !(/N/) &amp;&amp; $l[1] &gt;= 100
+        &amp;&amp; length($l[14]) &lt; 100 &amp;&amp; length($l[14]) &gt; 70
+        &amp;&amp; s/\t([ATGC])/\n$1/ &amp;&amp; print $_;&#39; \
+    &gt; /scratch/dbg/ecre/203.prot.fa &amp;
+</code></pre>
+
+<p>I also want to filter these reads on perfect promoters. There are only two, so I can just grep for them quickly. </p>
+
+<pre><code class="console">$ grep -Pic &#39;(ctgacagctagctcagtcctaggtataatgctagcCACCG|ttgacggctagctcagtcctaggtacagtgctagcTTAAT)&#39; \
+    /scratch/dbg/ecre/203.dna.fa
+44315
+
+$ grep -Pic &#39;(ctgacagctagctcagtcctaggtataatgctagcCACCG|ttgacggctagctcagtcctaggtacagtgctagcTTAAT)&#39; \
+    /scratch/dbg/ecre/203.prot.fa
+91545
+</code></pre>
+
+<p>Let&#39;s filter on RBS also. I need to make a simple text file with all promoter and RBS combinations. I can do that with the <code>lib_seqs</code> object. </p>
+
+<pre><code class="r">all_promo_rbs &lt;- with(lib_seqs, unique(paste(&quot;^&quot;, Promoter.seq, RBS.seq, 
+    sep = &quot;&quot;)))
+write(all_promo_rbs, file = paste(getwd(), &quot;/data/all_promo_rbs.txt&quot;, 
+    sep = &quot;&quot;))
+length(all_promo_rbs)
+</code></pre>
+
+<pre><code>## [1] 280
+</code></pre>
+
+<p>Let&#39;s look for DNA based on those promoters, and then filter the protein on that DNA that matches the promoters. Let&#39;s also throw away DNA that has fewer than 30 bases of AA sequence and </p>
+
+<p>Finally, we&#39;ll filter the DNA again for only keep DNA that shows up in the protein reads.</p>
+
+<pre><code class="bash">#filter DNA on known promo/rbs combos
+grep -B1 -if data/all_promo_rbs.txt data/203.dna.fa | grep -v &#39;\--&#39; \
+    &gt; data/203.dna.filtered.fa &amp;
+
+#split the read into 3 parts, filter for ATG start codon and 30 bases of CDS
+perl -pe &#39;s/([^ATGC])\n/$1\t/&#39; data/203.dna.filtered.fa \
+    | perl -ne &#39;s/([ATGC]{40})([ATGC]{18,}?)(ATG[ATGC]{30})/$1\t$2\t$3/ 
+        &amp;&amp; length($3) % 3 == 0 &amp;&amp; s/(\d)\t([ATGC])/$1\n$2/ 
+        &amp;&amp; print;&#39; &gt; data/203.dna.filtered2.fa
+
+</code></pre>
+
+<h2>Align Protein with Bowtie</h2>
+
+<p>Now we align the Protein to DNA using Bowtie. (grep would be slower). First we build the Bowtie index:</p>
+
+<pre><code class="bash">#build the bowtie index
+/opt/bowtie/bowtie-build data/203.dna.filtered2.fa data/203.filtered2
+</code></pre>
+
+<p>The we run bowtie, searching for reads that match the DNA perfectly. This will also grab partial matches, but we can throw that out the same way we removed invalid DNA reads, with a perl regex. </p>
 
 <blockquote>
-<p>I&#39;ll show this to Sri. I think we could probably do it this way. It resolves all of the problems that we&#39;ve seen with the DNA mismatch sequences and the extra sequences would likely enhance the power of our analyses.</p>
+<p>Bowtie Settings:<br/>
+    <code>-k 280</code>: report up to 280 alignments per contig (280 promo/rbs combos)<br/>
+    <code>-v 0</code>: 0 mismatches per contig (no indels)<br/>
+    <code>-l 10</code>: seed length of 10<br/>
+    <code>-p 16</code>: use all 16 processors<br/>
+    <code>-m 1</code>: throw away reads that do not match to one sequence only</p>
 </blockquote>
+
+<pre><code class="bash">#perform bowtie for Protein. Afterwards, remove from that output any protein
+#reads that are not complete matches
+perl -ne &#39;s/([ATGC]{40})([ATGC]{18,}?)(ATG[ATGC]{30})/$1\t$2\t$3/ 
+
+/opt/bowtie/bowtie -v 0 -l 10 -k 280 -p 2 -m 1 \
+    --norc --best --strata --suppress 2,6 \
+    --un data/203.prot.unmapped.fa -f data/203.filtered2 data/203.prot.fa \
+    | perl -ne &#39;s/([ATGC]{40})([ATGC]{18,}?)(ATG[ATGC]{30})/$1\t$2\t$3/ 
+        &amp;&amp; length($3) % 3 == 0 &amp;&amp; print;&#39; &gt; data/203.prot.bowtie
+## reads processed: 165600
+## reads with at least one reported alignment: 18254 (11.02%)
+## reads that failed to align: 145854 (88.08%)
+## reads with alignments suppressed due to -m: 1492 (0.90%)
+## Reported 18254 alignments to 1 output stream(s)
+
+wc -l data/203.prot.bowtie
+## 17083 (down from 18254 due to checking for partial aligns with perl pipe)
+
+#now remove the reads from the DNA set that are not matched with protein
+grep -A1 -Fw -f &lt;(cut -f 15 data/203.prot.bowtie) data/203.dna.filtered2.fa \
+    | grep -v &#39;\--&#39; &gt; data/203.dna.filtered3.fa
+
+wc -l data/203.dna.filtered3.fa 
+##  32268 (16134 records)
+</code></pre>
+
+<h2>Align RNA with Bowtie</h2>
+
+<p>So now we have the protein and the DNA done; on to the RNA. We need to make a new bowtie index of the filtered DNA first. Again, we check the RNA output for unique alignments (with <code>-m 1</code>) and pipe the output to perl, but this time it is simply to separate the CDS from the RBS/Promoter region for easier  splitting. </p>
+
+<pre><code class="bash">#build the bowtie index
+/opt/bowtie/bowtie-build data/203.dna.filtered3.fa data/203.filtered3
+
+#perform bowtie for RNA
+/opt/bowtie/bowtie -v 0 -l 10 -k 280 -p 2 -m 1 \
+    --norc --best --strata --suppress 2,6 \
+    --un data/203.rna.unmapped.fa -f data/203.filtered3 \
+    &lt;(perl -pe &#39;s/([^ATGC])\n/$1\t/&#39; data/203.rna.fa \
+    | perl -ne &#39;@l = split; ($l[1] &gt; 4
+        &amp;&amp; length($l[4]) &lt; 90 &amp;&amp; length($l[4]) &gt; 52) 
+        &amp;&amp; (s/\t([ATGC])/\n$1/ &amp;&amp; print);&#39;) \
+    | perl -ne &#39;s/([ATGC]{18,}?)(ATG[ATGC]{30})/$1\t$2/ 
+        &amp;&amp; print;&#39; &gt; data/203.rna.bowtie
+## reads processed: 340721
+## reads with at least one reported alignment: 61846 (18.15%)
+## reads that failed to align: 275815 (80.95%)
+## reads with alignments suppressed due to -m: 3060 (0.90%)
+## Reported 61846 alignments to 1 output stream(s)
+
+cut -f5 data/203.rna.bowtie | sort | uniq -c | wc -l
+   14765
+</code></pre>
+
+<h2>Final Subset of RNA, DNA and Protein</h2>
+
+<p>We are left with <strong>14,765</strong> reads that pass all the criteria, which is close to the 14,234 that we started with. Finally, we remove the DNA and Protein reads that do not appear in the RNA to get a consistent set of 14,765 constructs.</p>
+
+<pre><code class="bash">#now remove the reads from the DNA set that are not matched with rna and 
+#create a &#39;bowtie-like&#39; output so the DNA/RNA/Protein records can all be
+#processed similarly. 
+grep -A1 -Fw -f &lt;(cut -f 5 data/203.rna.bowtie) data/203.dna.filtered3.fa \
+    | grep -v &#39;\--&#39; \
+    | perl -pe &#39;s/([^ATGC])\n/$1\t/ &amp;&amp; s/&gt;//&#39; &gt; data/203.dna.bowtie
+
+wc -l data/203.dna.bowtie
+##  14765
+</code></pre>
+
+<h2>Conclusions</h2>
+
+<p>After all of this, we only gained 822 new sequences, and we lost approximately 291 of the designed sequnces because they had too few reads.  I don&#39;t think there are enough new sequences to warrant the headache caused by the potential bad data introduced here. It is a pain to do all of this work and then go back to the previous style of analysis (with mismatches), but I think overall it will be easier to stick to the designed sequences only. </p>
 
 </body>
 
